# agent-terrier

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  rust-toolchain.toml
crates/agentkeys-backend-client/: Cargo.toml
crates/agentkeys-backend-client/src/: client.rs  fixtures.rs  lib.rs  protocol.rs
crates/agentkeys-broker-server/: Cargo.toml
crates/agentkeys-broker-server/migrations/: 0001_v2_schema.sql
crates/agentkeys-broker-server/solidity/: foundry.toml
crates/agentkeys-broker-server/src/: accept_assertion.rs  audit.rs  auth.rs  aws_ecs.rs  boot.rs  config.rs  env.rs  error.rs  gate_admin.rs  lib.rs  main.rs  metrics.rs  oidc.rs  sandbox_backend.rs  sponsor.rs  sponsored_accept.rs  state.rs  sts.rs  ve_faas.rs  ve_sign.rs  ve_sts.rs
crates/agentkeys-broker-server/tests/: agent_bootstrap_flow.rs  auth_wallet_flow.rs  delegation_flow.rs  email_flow.rs  graceful_shutdown.rs  grant_flow.rs  invariant_load_bearing.rs  mint_flow.rs  mint_v2_flow.rs  oauth2_flow.rs  oidc_flow.rs  ses_email_flow.rs  ve_faas_live.rs  ve_sign_live.rs  ve_sts_live.rs  wallet_flow.rs
crates/agentkeys-bundler/: Cargo.toml
crates/agentkeys-bundler/src/: legacy_tx.rs  lib.rs  main.rs  server.rs
crates/agentkeys-catalog/: Cargo.toml
crates/agentkeys-catalog/src/: compile.rs  lib.rs  policy_intent.rs  validate.rs
crates/agentkeys-classify-dataset/: Cargo.toml
crates/agentkeys-classify-dataset/src/: main.rs  record.rs
crates/agentkeys-cli/: Cargo.toml
crates/agentkeys-cli/src/: agent_admin.rs  cred_admin.rs  delegation_admin.rs  device_session.rs  hook.rs  inbox_curate.rs  k11.rs  k11_intent.rs  k11_webauthn.rs  lib.rs  main.rs  session_store.rs  speech.rs  wire.rs
crates/agentkeys-cli/tests/: cli_tests.rs  k11_cli.rs
crates/agentkeys-core/: Cargo.toml
crates/agentkeys-core/chain-profiles/: anvil.json  base-sepolia.json  base.json  ethereum.json  heima-paseo.json  heima.json  sepolia.json
crates/agentkeys-core/examples/: export_audit_vectors.rs
crates/agentkeys-core/src/: actor_omni.rs  auth_request.rs  backend.rs  chain_profile.rs  device_crypto.rs  envelope_v3.rs  erc4337.rs  init_flow.rs  kek.rs  lib.rs  memory_engine.rs  mock_client.rs  openviking.rs  otp.rs  payment.rs  s3_backend.rs  s3_endpoint.rs  session_policy.rs  session_store.rs  signer_client.rs
crates/agentkeys-core/tests/: classify_op_taxonomy_no_drift.rs  signer_conformance.rs  tos_live.rs
crates/agentkeys-daemon/: Cargo.toml
crates/agentkeys-daemon/src/: audit_decode.rs  chat_loop.rs  companion.rs  hardening.rs  main.rs  master_session.rs  pairing.rs  persona.rs  presets.rs  proxy.rs  session.rs  ui_bridge.rs
crates/agentkeys-daemon/tests/: daemon_tests.rs  pair_tests.rs
crates/agentkeys-device-core/: Cargo.toml  cbindgen.toml  gen-header.sh  test-ffi.sh
crates/agentkeys-device-core/ctest/: ffi_smoke.c
crates/agentkeys-device-core/src/: ffi.rs  lib.rs  rt.rs
crates/agentkeys-gate/: Cargo.toml  README.md
crates/agentkeys-gate/src/: admin.rs  audit.rs  auth.rs  config.rs  error.rs  keys.rs  lib.rs  main.rs  meter.rs  openai.rs  relay.rs  server.rs  speech.rs  upstream.rs  voices.rs
crates/agentkeys-gate/tests/: relay_flow.rs
crates/agentkeys-inference-creds/: Cargo.toml
crates/agentkeys-inference-creds/src/: lib.rs
crates/agentkeys-mcp/: Cargo.toml
crates/agentkeys-mcp-server/: Cargo.toml  Dockerfile  README.md
crates/agentkeys-mcp-server/src/: auth.rs  config.rs  errors.rs  lib.rs  main.rs  mcp.rs  policy.rs  server.rs  transport.rs
crates/agentkeys-mcp-server/tests/: http_auth.rs  schema_only_stubs.rs  three_acts.rs  transport_conformance.rs
crates/agentkeys-mcp/src/: lib.rs  server.rs
crates/agentkeys-memory-engine/: Cargo.toml
crates/agentkeys-memory-openviking/: Cargo.toml
crates/agentkeys-memory-openviking/src/: lib.rs
crates/agentkeys-mock-server/: Cargo.toml
crates/agentkeys-mock-server/src/: auth.rs  db.rs  dev_key_service.rs  error.rs  lib.rs  main.rs  state.rs  test_client.rs
crates/agentkeys-mock-server/tests/: dev_key_service_routes.rs  integration.rs
crates/agentkeys-provisioner/: Cargo.toml
crates/agentkeys-provisioner/src/: aws_creds.rs  error.rs  lib.rs  metrics.rs  orchestrator.rs  subprocess.rs  tripwire.rs
crates/agentkeys-web-core/: Cargo.toml
crates/agentkeys-web-core/src/: broker.rs  lib.rs  wasm.rs
crates/agentkeys-worker-audit/: Cargo.toml
crates/agentkeys-worker-audit/src/: handlers.rs  lib.rs  main.rs  merkle.rs  state.rs
crates/agentkeys-worker-audit/tests/: envelope_v2.rs
crates/agentkeys-worker-channel/: Cargo.toml
crates/agentkeys-worker-channel-weixin/: Cargo.toml
crates/agentkeys-worker-channel-weixin/src/: admin.rs  config.rs  handlers.rs  ilink.rs  ilink_login.rs  ilink_loop.rs  l3.rs  lib.rs  main.rs  registry.rs  relay.rs  router.rs  signature.rs  state.rs  telegram.rs  telegram_loop.rs
crates/agentkeys-worker-channel-weixin/tests/: gateway_flow.rs  ilink_admin_e2e.rs  ilink_flow.rs  ilink_login_e2e.rs  registry_export_import.rs  telegram_flow.rs
crates/agentkeys-worker-channel/src/: handlers.rs  lib.rs  main.rs  state.rs  sts_mint.rs  wakeup.rs
crates/agentkeys-worker-classify/: Cargo.toml
crates/agentkeys-worker-classify/src/: classify.rs  handlers.rs  lib.rs  main.rs  state.rs
crates/agentkeys-worker-config/: Cargo.toml
crates/agentkeys-worker-config/src/: handlers.rs  lib.rs  main.rs  state.rs
crates/agentkeys-worker-creds/: Cargo.toml
crates/agentkeys-worker-creds/src/: audit.rs  aws_creds.rs  envelope.rs  errors.rs  handlers.rs  lib.rs  main.rs  state.rs  verify.rs
crates/agentkeys-worker-creds/tests/: durable_audit.rs  envelope_cross_compat.rs
crates/agentkeys-worker-email/: Cargo.toml
crates/agentkeys-worker-email/src/: handlers.rs  lib.rs  main.rs  state.rs
crates/agentkeys-worker-memory/: Cargo.toml
crates/agentkeys-worker-memory/src/: handlers.rs  lib.rs  main.rs  state.rs
firmware/esp32s3-agentkeys/main/: CMakeLists.txt  button.c  button.h  config.h  https_chat.c  https_chat.h  led_status.c  led_status.h  main.c  secrets.h.example  wifi_sta.c  (+1 more)
(+487 files in other folders)
