[workspace]
resolver = "2"
members = [
    "crates/agentkeys-types",
    "crates/agentkeys-core",
    "crates/agentkeys-mock-server",
    "crates/agentkeys-cli",
    "crates/agentkeys-daemon",
    "crates/agentkeys-mcp",
    "crates/agentkeys-provisioner",
    "crates/agentkeys-broker-server",
    "crates/agentkeys-worker-creds",
    "crates/agentkeys-worker-memory",
    "crates/agentkeys-worker-audit",
    "crates/agentkeys-worker-email",
]

[workspace.dependencies]
agentkeys-types = { path = "crates/agentkeys-types" }
agentkeys-core = { path = "crates/agentkeys-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "2"
anyhow = "1"
