[workspace]
resolver = "2"
members = [
    "crates/agentkeys-types",
    "crates/agentkeys-core",
    "crates/agentkeys-memory-engine",
    "crates/agentkeys-memory-openviking",
    "crates/agentkeys-web-core",
    "crates/agentkeys-mock-server",
    "crates/agentkeys-cli",
    "crates/agentkeys-daemon",
    "crates/agentkeys-mcp",
    "crates/agentkeys-mcp-server",
    "crates/agentkeys-provisioner",
    "crates/agentkeys-broker-server",
    "crates/agentkeys-worker-creds",
    "crates/agentkeys-worker-memory",
    "crates/agentkeys-worker-config",
    "crates/agentkeys-worker-audit",
    "crates/agentkeys-worker-email",
]

[workspace.dependencies]
agentkeys-types = { path = "crates/agentkeys-types" }
agentkeys-core = { path = "crates/agentkeys-core" }
agentkeys-memory-engine = { path = "crates/agentkeys-memory-engine" }
agentkeys-memory-openviking = { path = "crates/agentkeys-memory-openviking" }
agentkeys-web-core = { path = "crates/agentkeys-web-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "2"
anyhow = "1"
