[workspace]
resolver = "2"
members = [
    "crates/agentkeys-types",
    "crates/agentkeys-device-core",
    "crates/agentkeys-core",
    "crates/agentkeys-memory-engine",
    "crates/agentkeys-memory-openviking",
    "crates/agentkeys-web-core",
    "crates/agentkeys-mock-server",
    "crates/agentkeys-cli",
    "crates/agentkeys-daemon",
    "crates/agentkeys-mcp",
    "crates/agentkeys-mcp-server",
    "crates/agentkeys-provisioner",
    "crates/agentkeys-backend-client",
    "crates/agentkeys-protocol",
    "crates/agentkeys-broker-server",
    "crates/agentkeys-worker-creds",
    "crates/agentkeys-worker-memory",
    "crates/agentkeys-worker-config",
    "crates/agentkeys-catalog",
    "crates/agentkeys-worker-classify",
    "crates/agentkeys-worker-audit",
    "crates/agentkeys-worker-email",
    "crates/agentkeys-gate",
    "crates/agentkeys-bundler",
    "crates/agentkeys-inference-creds",
]

[workspace.dependencies]
agentkeys-types = { path = "crates/agentkeys-types" }
agentkeys-device-core = { path = "crates/agentkeys-device-core" }
agentkeys-core = { path = "crates/agentkeys-core" }
agentkeys-memory-engine = { path = "crates/agentkeys-memory-engine" }
agentkeys-memory-openviking = { path = "crates/agentkeys-memory-openviking" }
agentkeys-web-core = { path = "crates/agentkeys-web-core" }
agentkeys-backend-client = { path = "crates/agentkeys-backend-client" }
agentkeys-protocol = { path = "crates/agentkeys-protocol" }
agentkeys-inference-creds = { path = "crates/agentkeys-inference-creds" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "2"
anyhow = "1"
zeroize = { version = "1", features = ["derive"] }
