[package]
name = "agentkeys-backend-client"
version = "0.1.0"
edition = "2021"

[lib]
name = "agentkeys_backend_client"
path = "src/lib.rs"

# Emits the canonical protocol fixtures (the serde shapes the broker/worker
# request bodies serialize to) to disk. The harness fixture-drift gate
# (scripts/check-backend-fixture-drift.sh) reads what this writes; a hand-rolled
# bash body that adds/renames/drops a field then fails CI (issue #203).
[[bin]]
name = "dump-protocol-fixtures"
path = "src/bin/dump_protocol_fixtures.rs"

[dependencies]
# The single shared STS relay primitive (mint-oidc-jwt +
# AssumeRoleWithWebIdentity) — the broker/worker chain's only pre-existing
# shared piece. The client crate wraps it so cap-mint + STS + worker put/get
# live behind ONE owner (issue #203).
agentkeys-provisioner = { path = "../agentkeys-provisioner" }
# K10 cap-mint proof-of-possession (issue #76): DeviceKey + cap_pop_now signing.
agentkeys-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"

[dev-dependencies]
tokio = { workspace = true }
