[package]
name = "agentkeys-broker-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agentkeys-broker-server"
path = "src/main.rs"

[lib]
name = "agentkeys_broker_server"
path = "src/lib.rs"

[dependencies]
agentkeys-types = { workspace = true }
axum = { version = "0.7", features = ["json"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4", features = ["derive", "env"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sha2 = "0.10"
hex = "0.4"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
aws-sdk-sts = "1"
jsonwebtoken = "9"
p256 = { version = "0.13", features = ["pkcs8", "pem", "ecdsa"] }
pkcs8 = { version = "0.10", features = ["pem"] }
base64 = "0.22"
rand_core = { version = "0.6", features = ["std"] }
getrandom = "0.2"

[features]
default = []
test-stub = []

[dev-dependencies]
agentkeys-broker-server = { path = ".", features = ["test-stub"] }
agentkeys-mock-server = { path = "../agentkeys-mock-server" }
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"
