[package]
name = "agentkeys-broker-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agentkeys-broker-server"
path = "src/main.rs"

[lib]
name = "agentkeys_broker_server"
path = "src/lib.rs"

[dependencies]
agentkeys-types = { workspace = true }
axum = { version = "0.7", features = ["json"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4", features = ["derive", "env"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sha2 = "0.10"
hex = "0.4"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
aws-sdk-sts = "1"
jsonwebtoken = "9"
p256 = { version = "0.13", features = ["pkcs8", "pem", "ecdsa"] }
pkcs8 = { version = "0.10", features = ["pem"] }
base64 = "0.22"
rand_core = { version = "0.6", features = ["std"] }
getrandom = "0.2"
# k256 + sha3 are gated via the `auth-wallet-sig` feature; they're declared as
# optional here and hard-required by the feature in [features]. Phase 0 default
# enables `auth-wallet-sig`, so these compile in by default.
k256 = { version = "0.13", features = ["ecdsa", "sha2"], optional = true }
sha3 = { version = "0.10", optional = true }
# OAuth2 (Phase A.2 / US-020) — state HMAC + URL building. Optional, gated
# via `auth-oauth2`. `url` is also a transitive dep of `reqwest` so the
# dep-graph cost is zero; declaring directly keeps the API stable.
hmac = { version = "0.12", optional = true }
url = { version = "2", optional = true }

[features]
# Plan §3 / §3.5 — pluggable trait surface, feature-gated per layer.
# v0 default ships the WalletSig + ClientSideKeystore + SqliteAnchor combination.
# v0 testnet adds auth-email-link + auth-oauth2-google + audit-evm.
# Heima/Solana/Passkey/Apple/GitHub deferred to v1+.
default              = ["auth-wallet-sig", "wallet-keystore", "audit-sqlite"]

# Auth methods. Per-method external deps land in subsequent stories:
# US-006 adds k256+sha3 to auth-wallet-sig; Phase A.1 adds lettre+aws-sdk-sesv2
# to auth-email-link; Phase A.2's OAuth2 reuses unconditional jsonwebtoken+reqwest.
auth-wallet-sig      = ["dep:k256", "dep:sha3"]
auth-email-link      = []
auth-oauth2          = ["dep:hmac", "dep:url"]
auth-oauth2-google   = ["auth-oauth2"]
auth-oauth2-github   = ["auth-oauth2"]            # v1+
auth-oauth2-apple    = ["auth-oauth2"]            # v1+

# Wallet provisioners.
wallet-keystore      = []                          # v0; ClientSideKeystore (no extra deps)

# Audit anchors.
audit-sqlite         = []                          # default; uses unconditional rusqlite
audit-evm            = []                          # Phase C; alloy deps land in US-031
audit-solana         = []                          # v1; deferred

# Test infrastructure.
test-stub            = []                          # existing — stubs STS/SES/RPC for offline tests

[dev-dependencies]
agentkeys-broker-server = { path = ".", features = ["test-stub"] }
agentkeys-mock-server = { path = "../agentkeys-mock-server" }
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"
