[package]
name = "agentkeys-broker-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agentkeys-broker-server"
path = "src/main.rs"

[lib]
name = "agentkeys_broker_server"
path = "src/lib.rs"

[dependencies]
agentkeys-types = { workspace = true }
# Issue #144 — shared device_crypto (EIP-191 ecrecover for link-code redeem
# pop_sig verify) + HDKD child_omni derivation. One source of truth across
# daemon/CLI/broker.
agentkeys-core = { workspace = true }
# #369 — the shared DelegationPath wire type echoed into the minted cap-token
# (one owner; the worker deserializes the SAME type).
agentkeys-protocol = { workspace = true }
# #295 P1 §7a: the broker mints an operator-tagged OIDC internally + AssumeRoles
# with a read-only exact-object session policy for delegated canonical-memory
# reads, reusing assume_role_with_jwt — so the delegate never holds the operator
# session bearer (Codex critical fix).
agentkeys-provisioner = { path = "../agentkeys-provisioner" }
axum = { version = "0.7", features = ["json"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4", features = ["derive", "env"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sha2 = "0.10"
hex = "0.4"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
aws-sdk-sts = "1"
# Real SES sender for email-link auth. Optional, gated behind
# auth-email-link — without the feature the broker has no SES sender at
# all (StubEmailSender remains for tests). Pulled in by Pass 1 of
# Option B per docs/archived/issue-74-dev-key-service-plan.md (see commit log).
aws-sdk-sesv2 = { version = "1", optional = true }
jsonwebtoken = "9"
p256 = { version = "0.13", features = ["pkcs8", "pem", "ecdsa"] }
pkcs8 = { version = "0.10", features = ["pem"] }
base64 = "0.22"
rand_core = { version = "0.6", features = ["std"] }
getrandom = "0.2"
# k256 + sha3 are gated via the `auth-wallet-sig` feature; they're declared as
# optional here and hard-required by the feature in [features]. Phase 0 default
# enables `auth-wallet-sig`, so these compile in by default.
k256 = { version = "0.13", features = ["ecdsa", "sha2"], optional = true }
# sha3 (Keccak256) was previously gated by `auth-wallet-sig` only — the
# v2 stage-1 cap-mint handler in `handlers/cap.rs` now needs it
# unconditionally (function-selector + service-name keccak), so the
# dep is mandatory. The `auth-wallet-sig` feature still pulls it via
# the explicit feature dep below; this just removes the optional gate.
sha3 = "0.10"
# OAuth2 (Phase A.2 / US-020) — state HMAC + URL building. Optional, gated
# via `auth-oauth2`. `url` is also a transitive dep of `reqwest` so the
# dep-graph cost is zero; declaring directly keeps the API stable.
hmac = { version = "0.12", optional = true }
url = { version = "2", optional = true }

[features]
# Plan §3 / §3.5 — pluggable trait surface, feature-gated per layer.
# v0 default ships the WalletSig + ClientSideKeystore + SqliteAnchor combination.
# v0 testnet adds auth-email-link + auth-oauth2-google + audit-evm.
# Heima/Solana/Passkey/Apple/GitHub deferred to v1+.
default              = ["auth-wallet-sig", "wallet-keystore", "audit-sqlite"]

# Auth methods. Per-method external deps land in subsequent stories:
# US-006 adds k256+sha3 to auth-wallet-sig; Phase A.1 adds lettre+aws-sdk-sesv2
# to auth-email-link; Phase A.2's OAuth2 reuses unconditional jsonwebtoken+reqwest.
auth-wallet-sig      = ["dep:k256"]
auth-email-link      = ["dep:aws-sdk-sesv2"]
auth-oauth2          = ["dep:hmac", "dep:url"]
auth-oauth2-google   = ["auth-oauth2"]
auth-oauth2-github   = ["auth-oauth2"]            # v1+
auth-oauth2-apple    = ["auth-oauth2"]            # v1+

# Wallet provisioners.
wallet-keystore      = []                          # v0; ClientSideKeystore (no extra deps)

# Audit anchors.
audit-sqlite         = []                          # default; uses unconditional rusqlite
audit-evm            = []                          # Phase C; alloy deps land in US-031
audit-solana         = []                          # v1; deferred

# Test infrastructure.
test-stub            = []                          # existing — stubs STS/SES/RPC for offline tests

[dev-dependencies]
agentkeys-broker-server = { path = ".", features = ["test-stub", "auth-email-link"] }
agentkeys-mock-server = { path = "../agentkeys-mock-server" }
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"
# Integration test only — receiver side of the SES → S3 round-trip in
# tests/ses_email_flow.rs. Not needed at runtime.
aws-sdk-s3 = "1"
uuid = { version = "1", features = ["v4"] }
# FutureExt::catch_unwind on async — used by tests/ses_email_flow.rs to
# guarantee cleanup runs in async context regardless of test panic.
futures-util = "0.3"
