[package]
name = "agentkeys-core"
version = "0.1.0"
edition = "2021"

[dependencies]
agentkeys-types = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ciborium = "0.2"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
tokio = { workspace = true }
keyring = "2"
anyhow = { workspace = true }

# Issue #85 — S3CredentialBackend (client-side AES-256-GCM, OIDC-scoped writes
# to s3://$BUCKET/bots/<wallet>/credentials/<service>.enc). Anonymous SDK
# config: the daemon-injected AWS_* env vars carry the temp creds minted via
# the broker (same path as agentkeys-provisioner::aws_creds).
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
aws-credential-types = "1"
aes-gcm = "0.10"
rand = "0.8"

[dev-dependencies]
tempfile = "3"
agentkeys-mock-server = { path = "../agentkeys-mock-server" }
axum = { version = "0.7", features = ["json"] }
k256 = { version = "0.13", features = ["ecdsa", "sha2"] }
sha3 = "0.10"
rusqlite = { version = "0.31", features = ["bundled"] }
rand_core = { version = "0.6", features = ["std"] }
getrandom = "0.2"
