[package]
name = "agentkeys-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agentkeys-daemon"
path = "src/main.rs"

[dependencies]
agentkeys-types = { workspace = true }
agentkeys-core = { workspace = true }
agentkeys-cli = { path = "../agentkeys-cli" } # K11 webauthn helpers (companion mode)
agentkeys-mcp = { path = "../agentkeys-mcp" }
# W3 real-memory: shared STS relay primitive (fetch_via_broker_default_ttl) for
# the master-memory cap-mint -> mint-oidc-jwt -> AssumeRoleWithWebIdentity chain.
agentkeys-provisioner = { path = "../agentkeys-provisioner" }
hex = "0.4"
sha2 = "0.10" # ui-bridge master-memory content-hash dedup (§2 plant)
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
# Parse `Retry-After` HTTP-date form (RFC 7231) for the §10.2 pairing poll
# backoff; tiny, zero-dep, the same parser hyper uses internally.
httpdate = "1"
# Advisory file lock to serialize same-device `--request-pairing` (no unsafe;
# flock on unix / LockFileEx on windows; released when the File is dropped).
fs2 = "0.4"
# v2 stage-1 localhost proxy (US-008). axum + tower + hyper power the
# `agentkeys-daemon proxy` subcommand (arch.md §6 + §15.1). The proxy
# binds to a unix socket (and optionally TCP 127.0.0.1:9090 when
# AGENTKEYS_DAEMON_TCP=1) and serves cap-token mint + cache requests.
axum = { version = "0.7", features = ["json"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["server", "tokio"] }
tower-service = "0.3"
# v2 stage-1 K11 WebAuthn enrollment surface for the parent-control web
# UI. webauthn-rs is the standard Rust server-side WebAuthn library; the
# daemon's ui-bridge mode uses it to construct registration challenges +
# verify attestations from the browser's navigator.credentials.create().
# See src/ui_bridge.rs.
webauthn-rs = "0.5"
url = "2"
# SSE audit-feed broadcast (PR-C) — futures-util drives the axum
# Sse stream; tokio-stream wraps the broadcast::Receiver as a Stream.
futures-util = { version = "0.3", default-features = false }
tokio-stream = { version = "0.1", features = ["sync"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
agentkeys-mock-server = { path = "../agentkeys-mock-server" }
rusqlite = { version = "0.31", features = ["bundled"] }
# axum + tower already in runtime deps above; tests inherit them.
http-body-util = "0.1"
tokio = { workspace = true }
base64 = "0.22"
libc = "0.2"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
serde_json = { workspace = true }
